--- a/furniture/furni/templates/furni/category.html
+++ b/furniture/furni/templates/furni/category.html
@@ -5,7 +5,7 @@
 <div class="bg-light py-2 border-bottom">
   <div class="container d-flex justify-content-between">
     <div>
-      <p>{{category.name}}</p>
+      
     </div>
     <!--
     <div>
@@ -18,6 +18,7 @@
   </div>
 </div>
 
+  {% if products %}
 <!-- Filters & Sort -->
 <div class="container py-4">
   <div class="d-flex justify-content-between align-items-center mb-4">
@@ -37,8 +38,20 @@
       </select>
     </div>
   </div>
+
   <div id="product-list" class="row g-4"> {% include "furni/product_list.html" with products=products %} </div>
+
 </div>
+{% else %}
+<div class="col-12" style="
+    text-align: center;
+    display: flex;
+    font-size: medium;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    height: 500px;"><p>Sorry, no products matched the keyword</p></div>
+  {% endif %}
 
 <!-- Offcanvas Filter Sidebar -->
 <div class="offcanvas offcanvas-start" tabindex="-1" id="filterOffcanvas">
@@ -78,15 +91,18 @@
     const base = window.location.pathname;
     const price = document.getElementById("price_filter").value;
     const sort = document.getElementById('sort_order').value;
+    let search = "{{search_word}}"
     const params = new URLSearchParams();
     if (price) params.append("price", price);
     if (sort) params.append("sort", sort);
-
+    if (search) params.append("search_word", search);
+    console.log(base + "?" + params.toString());
     return base + "?" + params.toString();
   }
 
   function getFilteredProducts() {
     const url = getFilterUrl();
+    let search_word = document.getElementById("product-search-input").value
     fetch(url, {
       headers: {
         "X-Requested-With": "XMLHttpRequest"
