--- a/furniture/furni/templates/furni/shop.html
+++ b/furniture/furni/templates/furni/shop.html
@@ -26,7 +26,7 @@
 					{% for category in categories %}
 		      		<!-- Start Column 1 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5">
-						<a class="product-item" href="{% url 'category' category.id %}">
+						<a class="product-item" href="{% url 'category' cat_name=category.name %}">
 							<img src="{{category.img.url}}" class="img-fluid product-thumbnail">
 							<h3 class="product-title">{{category.name}}</h3>
 						</a>
